--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,9 @@
     padding: 0%;
     font-family: "Roboto",sans-serif;
     color: white;
+    &::-webkit-scrollbar{
+        display: none;
+    }
 }
 $bg: rgb(16, 16, 16);
 
